alignwide on container bug fixed

--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -444,7 +444,7 @@
 	.page-template-default .entry-content>.c9-grid .container.alignwide {
 		padding-left: 5px;
 		padding-right: 5px;
-		width: 100%;
+		width: 100vw;
 		max-width: 1260px;
 	}
 
